--- a/src/app/components/employee-dialog/employee-dialog.component.html
+++ b/src/app/components/employee-dialog/employee-dialog.component.html
@@ -28,5 +28,5 @@
 
 <mat-dialog-actions>
     <button mat-button (click)="closeDialog()">Cancel</button>
-    <button mat-button color="primary" (click)="onSubmit()">Save</button>
+    <button mat-button color="primary" (click)="onSubmit()" [disabled]="!this.form.valid">Save</button>
 </mat-dialog-actions>
